--- a/main.css
+++ b/main.css
@@ -1,1 +1,37 @@
-
+html {
+    background-color: lightCoral;
+    font: normal 'Times New Roman', serif;
+    }
+    
+    h1 {
+      margin-top: 2px;
+      margin-bottom: 0px;
+      font: normal 40px 'Mukta', sans-serif;
+      color: saddleBrown; 
+    }
+    
+    h3 {
+      margin-top: 0px;
+      font: normal 18px 'Times New Roman', serif; 
+    }
+    
+    a {
+      color: whiteSmoke;
+      text-decoration: none;
+    }
+    
+    a:hover {
+      color:olive;
+      text-decoration: underline;
+    }
+    
+    a:visited {
+      color:olive;
+    }
+    
+    img {
+      margin-right: 20px;
+      margin-top: 15px;
+      border: 6px outset brown;
+      width: 120px;
+    }
