--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 html {
-    background-color: skyBlue;
+    background-color: LightSeaGreen;
     font: normal 'Times New Roman', serif;
     }
     
