--- a/main.css
+++ b/main.css
@@ -16,7 +16,7 @@ html {
     }
     
     a {
-      color: whiteSmoke;
+      color: white;
       text-decoration: none;
     }
     
@@ -26,7 +26,7 @@ html {
     }
     
     a:visited {
-      color:olive;
+      color:black;
     }
     
     img {
