--- a/ECS8th2018_2019/movie_review/main.css
+++ b/ECS8th2018_2019/movie_review/main.css
@@ -14,7 +14,7 @@ html {
   font: 18px 'Times New Roman', serif;
   width: 320px;
   margin: 0 auto 0 auto;
-  background-image: url(/images/textures/light15a.png);
+  background-color: darkGrey;
 }
 
 h1 {
